app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-portal-deployment
  namespace: university-apps
spec:
  replicas: 2
  strategy:
    type: RollingUpdate        # Бесперебойный деплой без простоя сервиса (Zero-Downtime Deployment)
    rollingUpdate:
      maxSurge: 1              # Разрешено временно запустить +1 под во время обновления
      maxUnavailable: 0        # Ни один старый под не уничтожается, пока новый под не пройдет Readiness Probe
  selector:
    matchLabels:
      app: student-portal
  template:
    metadata:
      labels:
        app: student-portal
    spec:
      imagePullSecrets:
      - name: enterprise-gitea-registry-secret
      containers:
      - name: web-app
        image: gitea-registry.internal/infrastructure/app-production:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "200m"
            memory: 512Mi
        # Инъекция безопасных переменных окружения из декларативных секретов Kubernetes
        ports:
        - containerPort: 80
        # Монтирование персистентного сетевого NFS хранилища для файлов, кэша и вендоров
        volumeMounts:
        - name: shared-nfs-volume
          mountPath: /var/www/html/profile_files
          subPath: application/profile_files
        - name: shared-nfs-volume
          mountPath: /var/www/html/vendor
          subPath: application/vendor
        - name: shared-nfs-volume
          mountPath: /var/www/html/runtime
          subPath: application/runtime
      volumes:
      - name: shared-nfs-volume
        persistentVolumeClaim:
          claimName: shared-nfs-production-pvc
