gitea-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-runner
  namespace: gitea-runner
spec:
  replicas: 2 # Изменено на 2 для демонстрации масштабируемости под задачи параллельной сборки
  selector:
    matchLabels:
      app: gitea-runner
  template:
    metadata:
      labels:
        app: gitea-runner
    spec:
      serviceAccountName: gitea-runner
      containers:
      - name: runner
        image: gitea/act_runner:latest
        volumeMounts:
        - name: config
          mountPath: /config.yaml
          subPath: config.yaml
      volumes:
      - name: config
        configMap:
          name: gitea-runner-config
