phpmyadmin-phpmyadmin-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: global-phpmyadmin
  namespace: university-sites
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: pma-config
          mountPath: /etc/phpmyadmin/config.user.inc.php
          subPath: config.user.inc.php
      volumes:
      - name: pma-config
        configMap:
          name: phpmyadmin-servers-config
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: university-sites
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: university-sites
  annotations:
    # Важное архитектурное решение: Защита панели управления базой данных дополнительным слоем Basic Auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: pma-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pma.example.edu.kz
    secretName: wildcard-tls-cert
  rules:
  - host: pma.example.edu.kz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
